* 8.3.0
Binders control construction of components rather than the container.

Wrapping Binders are now functional - see ServiceFilter and
ServiceFilterBinder as examples.  ServiceFilterBinder is a base class
for installing Service monitors/proxies/wrappers between a standard
binder and the component.  There is an example of an instantiable
extension in core/examples/org/cougaar/core/examples/PluginServiceFilter.java
PluginServiceFilter monitors new subscription requests of the bound plugin.

* 8.2.2
New INI file format to support BinderFactory loading:
  "insertionPoint = classname(Vector of Strings)"
with backwards-compatibility for "cluster = " and "plugin = ".
Node has been modified to load Components using ComponentDescriptions.

* 8.2.1
ComponentModel name change: org.cougaar.core.component.Services has
been renamed ServiceBroker to better reflect the function of the
class as decided during the June 2001 BBN CDR (and as documented in
the distributed CDR slides).  Various other component/service model
classes, methods, and argument names were modified to match
(e.g. BindingSite.getServices() -> BindingSite.getServiceBroker()).

* 8.2.0

Initial integration of Component and Service Model (CSM).  Reimplementation
of PlugInAdapter in terms of CSM.  First pass reimplementation of
MessageTransport.

Forward-port 7.2 (ALP Demo2000) features and bugfixes into 8.x world.

* MB 8.0.1

Ported all XML code to use a single API, specifically Xerces-1.3.1.
The majority of changes was the removal of old import statements that
referenced old IBM parsers.

org.cougaar.util.ConfigFinder was modifed to use the the DOMParser when
reading in an XML file.  It also now contains an inner class that extends
EntityResolver.  This new class is used to locate, via the config finder
methods, any required DTD's that are defined within XML files.

All files that serialized XML code now use XMLSerializable, which is the
only way to serialize an XML document in Xerces.

* MB 8.0
