@@ -25,32 +25,5 @@ public class PluginManagerBinderFactory extends BinderFactorySupport
     return PluginManagerBinder.class;
   }
   
-  /** Bind the Child component.  <p>
-   * The child component will already have been instantiated and any
-   * parameter has been set.  Depending on the ComponentFactory (or other
-   * constructor/initializer methods) used, there may have been additional
-   * initialization performed. <p>
-   * Generally all this method does is construct a new instance of 
-   * bindingSite for use with the child component.
-   * Various implementations may do additional Binder initialization
-   * such as starting a thread, instructing the binder to provide additional
-   * services, etc.
-   *
-   * @return A Binder instance of class bindingSite which is binding 
-   * the child component or null.
-   **/
-  public Binder bindChild(Class binderClass, Object child) {
-    //Agent agent = (Agent) getParentComponent();
-    Agent agent = (Agent) getBindingSite();
-    try {
-      Constructor constructor = binderClass.getConstructor(new Class[]{Object.class, Component.class});
-      Binder binder = (Binder) constructor.newInstance(new Object[] {agent, child});
-      ((PluginManagerBinder)binder).initialize();
-      return binder;
-    } catch (Exception e) {
-      e.printStackTrace();
-      throw new RuntimeException(e.toString());
-    }
-  }
 }
 
