@@ -1,4 +1,8 @@
 * 8.3.0
+The Component chain Node->AgentManager->Agent/Cluster->PluginManager->Plugin 
+is complete, with appropriate Binders and connection of ServiceBrokers
+so that low-level compoents can request high-level services.
+
 Binders control construction of components rather than the container.
 
 Wrapping Binders are now functional - see ServiceFilter and
